# docs/swagger.json
@@ -654,6 +654,9 @@
         "models.Address": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -671,6 +674,14 @@
                 },
                 "phone_number": {
                     "type": "string"
+                },
+                "region": {
+                    "description": "Non-persisted field (join-result)",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Region"
+                        }
+                    ]
                 },
                 "region_id": {
                     "type": "string"
@@ -713,7 +724,27 @@
             }
         },
         "models.User": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
         }
     },
     "securityDefinitions": {
